[package]
name = "actix-swagger-derive"
authors = ["Kirill Mironov <vetrokm@gmail.com>"]
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full", "visit-mut"]}