[package]
name = "actix-swagger-derive"
authors = ["Kirill Mironov <vetrokm@gmail.com>"]
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
openapiv3 = "0.5.0"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full", "visit-mut", "extra-traits"]}
once_cell = "1.8.0"
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
convert_case = "0.4.0"

[dev-dependencies]
actix-web = { version = "4.0.0-beta.8", default-features = false }