[package]
name = "actix-swagger"
version = "0.3.0-beta.1"
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix", "actix-web", "swagger", "codegen"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
actix-web = "4.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.25"
actix-rt = "2.3.0"
actix-http = "3.0.0-beta.10"
futures = "0.3.15"
serde_urlencoded = "0.7.0"
take_mut = "0.2.2"
