[package]
name = "actix-swagger"
version = "0.3.0-beta.4"
authors = ["Sergey Sova <mail@sergeysova.com>", "Kirill Mironov <vetrokm@gmail.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix", "actix-web", "swagger", "codegen"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
actix-web = { version = "4.2.1", default-features = false, features=["cookies"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
actix-http = "3.2.2"
serde_urlencoded = "0.7.1"
take_mut = "0.2.2"
