[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "alternate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = {version = "1.0", features = ["serde-1"]}
openapiv3 = "0.3.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
insta = {version = "1.6", features = ["ron", "redactions"]}
tempfile = "3.2"
