[package]
name = "cargo-swagg"
version = "0.0.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix", "actix-web", "swagger", "codegen"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
actix-swagger = "0.0"
openapiv3 = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
quote = "1.0.2"
inflections = "1.1.1"
proc-macro2 = "1.0.8"
regex = "1.3.3"
