[package]
name = "cargo-swagg"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix-web", "swagger", "codegen", "openapi", "cli"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
swagg = "0.2.0"
env_logger = "0.7.1"
clap = { version = "2.33.0", features = ["suggestions", "color", "wrap_help"] }
