[package]
name = "demo"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-swagger = { path = "../actix-swagger" }
actix-web = { git = "https://github.com/Drevoed/actix-web", branch = "fix/rustls-update" }
serde = "1.0.130"
