[package]
name = "demo"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-swagger = { path = "../actix-swagger" }
actix-web = { version = "4.2.1", default-features = false }
serde = "1.0.130"
