[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "openapi-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflections = "1.1.1"
openapi-hooks = "0.1.0"
proc-macro2 = "1.0.8"
quote = "1.0.2"
regex = "1.3.3"
serde = "1.0.123"
tempfile = "3.2.0"

[dev-dependencies]
insta = {version = "1.6", features = ["ron", "redactions"]}
