[package]
name = "swagg"
version = "0.2.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix", "actix-web", "swagger", "codegen", "openapi"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
indexmap = "1.2.3"
inflections = "1.1.1"
log = "0.4.8"
openapiv3 = "0.3.0"
proc-macro2 = "1.0.8"
quote = "1.0.2"
regex = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
insta = { version = "0.15.0", features = ["ron"] }
tempfile = "3.1.0"
