[package]
name = "actix-swagger"
version = "0.0.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = [
  "development-tools",
  "network-programming",
  "web-programming::http-server",
  "web-programming"
]
description = "Code generator from swagger file for actix-web framework"
keywords = ["actix", "actix-web", "swagger", "codegen"]
license = "MIT"
edition = "2018"
repository = "https://github.com/sergeysova/actix-swagger"

[dependencies]
actix-web = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt = "1.0.0"
